finish css layout

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
+
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>cmv161</title>
 </head>
 <body>
-<div id="app" class="=container"></div>
-=======
+<div id="app" >
+
+    </div>
+
+
   <meta charset="UTF-8">
   <title>$Title$</title>
-</head>
+</body>
 <body>
-$END$
->>>>>>> origin/webpack
+
 </body>
 </html>
